--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,23 +1,21 @@
+/* This is the BuckleScript configuration file. Note that this is a comment;
+  BuckleScript comes with a JSON parser that supports comments and trailing
+  comma. If this screws with your editor highlighting, please tell us by filing
+  an issue! */
 {
-  "name": "reason-react-example",
-  "bsc-flags": ["-bs-no-version-header", "-bs-super-errors"],
-  "reason": {"react-jsx" : 2},
-  "namespace": true,
+  "name": "reason-react-hacker-news",
+  "reason": {"react-jsx": 2},
+  "package-specs": ["commonjs", "es6"],
   "bs-dependencies": [
     "reason-react",
     "bs-fetch",
-    "@glennsl/bs-json"
+    "@glennsl/bs-json",
+    "bs-webapi"
   ],
+  "refmt": 3,
   "sources": [
     {
-      "dir": "src",
-      "subdirs": true
+      "dir": "src"
     }
-  ],
-  "package-specs": {
-    "module": "commonjs",
-    "in-source": true
-  },
-  "suffix": ".bs.js",
-  "refmt": 3
+  ]
 }
