--- a/package.json
+++ b/package.json
@@ -1,33 +1,54 @@
 {
-  "name": "reason-react-example",
+  "name": "reason-react-hacker-news",
   "private": true,
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "bsb -make-world",
-    "start": "bsb -make-world -w",
-    "clean": "bsb -clean-world",
-    "test": "exit 0",
-    "webpack": "webpack -w",
-    "webpack:production": "NODE_ENV=production webpack"
+    "test": "NODE_ENV=production yarn build",
+    "start": "yarn run dev | yarn run bsb-watch",
+    "dev": "webpack-dev-server",
+    "static": "node scripts/serveStatic.js",
+    "bsb-watch": "bsb -make-world -w",
+    "build": "bsb -make-world && webpack  && cp -av public/* dist",
+    "bsb-build": "bsb -make-world",
+    "upload": "./s3_upload.sh",
+    "analyze": "NODE_ENV=analyze yarn build; analyze-bundle -b dist/build/main.js -s dist/build/stats.json",
+    "clean": "bsb -clean-world"
   },
   "keywords": [],
-  "author": "",
+  "author": "James Friend",
   "license": "MIT",
   "dependencies": {
     "@glennsl/bs-json": "^3.0.0",
-    "bs-fetch": "^0.3.1",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "reason-react": "^0.5.3",
-    "todomvc-app-css": "^2.2.0",
-    "todomvc-common": "^1.0.5"
+    "bs-fetch": "^0.3.0",
+    "bs-webapi": "^0.13.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "reason-react": "0.5.3"
   },
   "devDependencies": {
-    "bs-platform": "^4.0.18",
-    "concurrently": "^4.1.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "bs-platform": "4.0.6",
+    "compression-webpack-plugin": "^1.1.11",
+    "css-loader": "^1.0.0",
+    "electrode-bundle-analyzer": "^1.0.1",
+    "express": "^4.16.3",
+    "express-static-gzip": "^0.3.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "rollup-loader": "^0.3.0",
+    "rollup-plugin-node-resolve": "^3.2.0",
+    "style-loader": "^0.20.3",
+    "sw-precache-webpack-plugin": "^0.11.5",
+    "uglifyjs-webpack-plugin": "^1.2.3",
+    "webpack": "^3.11",
+    "webpack-bundle-size-analyzer": "^2.7.0",
+    "webpack-cli": "2.0.12",
+    "webpack-closure-compiler": "^2.1.6",
+    "webpack-common-shake": "^1.5.3",
+    "webpack-dev-server": "^2.11.1",
+    "webpack-manifest-plugin": "^2.0.0-rc.2",
+    "webpack-shell-plugin": "^0.5.0",
+    "webpack-stats-plugin": "^0.2.1"
   }
 }
