--- a/package.json
+++ b/package.json
@@ -21,33 +21,33 @@
   "license": "MIT",
   "dependencies": {
     "@glennsl/bs-json": "^3.0.0",
-    "bs-fetch": "^0.3.0",
-    "bs-webapi": "^0.13.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "bs-fetch": "^0.3.1",
+    "bs-webapi": "^0.13.4",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "reason-react": "0.5.3"
   },
   "devDependencies": {
-    "bs-platform": "4.0.6",
+    "bs-platform": "4.0.18",
     "compression-webpack-plugin": "^1.1.11",
-    "css-loader": "^1.0.0",
+    "css-loader": "^2.1.0",
     "electrode-bundle-analyzer": "^1.0.1",
-    "express": "^4.16.3",
-    "express-static-gzip": "^0.3.2",
+    "express": "^4.16.4",
+    "express-static-gzip": "^1.1.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
+    "file-loader": "^3.0.1",
     "rollup-loader": "^0.3.0",
-    "rollup-plugin-node-resolve": "^3.2.0",
-    "style-loader": "^0.20.3",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "style-loader": "^0.23.1",
     "sw-precache-webpack-plugin": "^0.11.5",
-    "uglifyjs-webpack-plugin": "^1.2.3",
-    "webpack": "^3.11",
-    "webpack-bundle-size-analyzer": "^2.7.0",
-    "webpack-cli": "2.0.12",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29",
+    "webpack-bundle-size-analyzer": "^3.0.0",
+    "webpack-cli": "3.2.3",
     "webpack-closure-compiler": "^2.1.6",
-    "webpack-common-shake": "^1.5.3",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-manifest-plugin": "^2.0.0-rc.2",
+    "webpack-common-shake": "^2.1.0",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-manifest-plugin": "^2.0.4",
     "webpack-shell-plugin": "^0.5.0",
     "webpack-stats-plugin": "^0.2.1"
   }
